long overdue commit of many edits

--- a/interpretability_rashomon.ipynb
+++ b/interpretability_rashomon.ipynb
@@ -27,6 +27,11 @@
     "\n",
     "https://www.statcan.gc.ca/eng/data-science/network/decision-making%20/\n",
     "\n",
+    "https://www.quantamagazine.org/science-has-entered-a-new-era-of-alchemy-good-20211020/?mc_cid=a1644c0083&mc_eid=508de67bb8\n",
+    "\n",
+    "Discusses the current state of lack of understanding of AI algorithms\n",
+    "\n",
+    "\n",
     "The StatCan article is super relevant. Good summary of what makes a model \"simple\" and the advantages of such models in certain domains over more complex black-box models. The article is linked to from the Gelman post above.\n",
     "\n",
     "* \"Rashomon effect\" (Breiman, 2001) (downloaded already)\n",
