various fixes and some generalizing to avoid massive copy paste code

--- a/interpretability_rashomon.ipynb
+++ b/interpretability_rashomon.ipynb
@@ -103,6 +103,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bd7114a5-3f53-4522-b214-b78d2f624069",
+   "metadata": {},
+   "source": [
+    "## AI for poker strategy\n",
+    "https://www.nytimes.com/2022/01/18/magazine/ai-technology-poker.html\n",
+    "\n",
+    "Talks about how AI algos don't explain how they got to optimal strategies. Players have to try to reverse-engineer the AI outcomes to get to a strategy."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef71a35b-9d16-41e8-be74-5b69ff8db3e3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "1b24eac1-48d6-4bf8-af50-5e1be16d7d8b",
    "metadata": {},
    "source": [
